--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -52,28 +52,28 @@ provider:
 
 functions:
   createHackathon:
-    handler: src/handlers/hackathon/create.create
+    handler: src/handler/hackathon/create.create
     events:
       - http:
           path: hackathon
           method: post
           cors: true
   listAllHackathons:
-    handler: src/handlers/hackathon/list.list
+    handler: src/handler/hackathon/list.list
     events:
       - http:
           path: hackathons
           method: get
           cors: true
   getHackathon:
-    handler: src/handlers/hackathon/get.get
+    handler: src/handler/hackathon/get.get
     events:
       - http:
           path: hackathon/{id}
           method: get
           cors: true
   deleteHackathon:
-    handler: src/handlers/hackathon/remove.remove
+    handler: src/handler/hackathon/remove.remove
     events:
       - http:
           path: hackathon/{id}
@@ -81,28 +81,28 @@ functions:
           cors: true
 
   createIdea:
-    handler: src/handlers/idea/create.create
+    handler: src/handler/idea/create.create
     events:
       - http:
           path: idea
           method: post
           cors: true
   listAllIdea:
-    handler: src/handlers/idea/list.list
+    handler: src/handler/idea/list.list
     events:
       - http:
           path: hackathon/{hackathonId}/ideas
           method: get
           cors: true
   getIdea:
-    handler: src/handlers/idea/get.get
+    handler: src/handler/idea/get.get
     events:
       - http:
           path: idea/{id}
           method: get
           cors: true
   deleteIdea:
-    handler: src/handlers/idea/remove.remove
+    handler: src/handler/idea/remove.remove
     events:
       - http:
           path: idea/{id}
@@ -110,28 +110,28 @@ functions:
           cors: true
 
   createUser:
-    handler: src/handlers/user/create.create
+    handler: src/handler/user/create.create
     events:
       - http:
           path: user
           method: post
           cors: true
   listAllUser:
-    handler: src/handlers/user/list.list
+    handler: src/handler/user/list.list
     events:
       - http:
           path: users
           method: get
           cors: true
   getUser:
-    handler: src/handlers/user/get.get
+    handler: src/handler/user/get.get
     events:
       - http:
           path: user/{id}
           method: get
           cors: true
   deleteUser:
-    handler: src/handlers/user/remove.remove
+    handler: src/handler/user/remove.remove
     events:
       - http:
           path: user/{id}
@@ -139,28 +139,28 @@ functions:
           cors: true
 
   createParticipant:
-    handler: src/handlers/participant/create.create
+    handler: src/handler/participant/create.create
     events:
       - http:
           path: participant
           method: post
           cors: true
   listAllParticipant:
-    handler: src/handlers/participant/list.list
+    handler: src/handler/participant/list.list
     events:
       - http:
           path: hackathon/{hackathonId}/participants
           method: get
           cors: true
   getParticipant:
-    handler: src/handlers/participant/get.get
+    handler: src/handler/participant/get.get
     events:
       - http:
           path: participant/{id}
           method: get
           cors: true
   deleteParticipant:
-    handler: src/handlers/participant/remove.remove
+    handler: src/handler/participant/remove.remove
     events:
       - http:
           path: participant/{id}
@@ -168,28 +168,28 @@ functions:
           cors: true
 
   createCategory:
-    handler: src/handlers/category/create.create
+    handler: src/handler/category/create.create
     events:
       - http:
           path: category
           method: post
           cors: true
   listAllCategory:
-    handler: src/handlers/category/list.list
+    handler: src/handler/category/list.list
     events:
       - http:
           path: hackathon/{hackathonId}/categories
           method: get
           cors: true
   getCategory:
-    handler: src/handlers/category/get.get
+    handler: src/handler/category/get.get
     events:
       - http:
           path: category/{id}
           method: get
           cors: true
   deleteCategory:
-    handler: src/handlers/category/remove.remove
+    handler: src/handler/category/remove.remove
     events:
       - http:
           path: category/{id}
@@ -197,28 +197,28 @@ functions:
           cors: true
 
   createSkill:
-    handler: src/handlers/skill/create.create
+    handler: src/handler/skill/create.create
     events:
       - http:
           path: skill
           method: post
           cors: true
   listAllSkill:
-    handler: src/handlers/skill/list.list
+    handler: src/handler/skill/list.list
     events:
       - http:
           path: skills
           method: get
           cors: true
   getSkill:
-    handler: src/handlers/skill/get.get
+    handler: src/handler/skill/get.get
     events:
       - http:
           path: skill/{id}
           method: get
           cors: true
   deleteSkill:
-    handler: src/handlers/skill/remove.remove
+    handler: src/handler/skill/remove.remove
     events:
       - http:
           path: skill/{id}
