--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -6,6 +6,9 @@
     "@mantine/core": "^4.0.7",
     "@mantine/form": "^4.0.7",
     "@mantine/hooks": "^4.0.7",
+    "@mantine/dates": "^4.1.4",
+    "@modulz/radix-icons": "^4.0.0",
+    "@mantine/notifications": "^4.1.4",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
