--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^4.0.7",
+    "@mantine/dates": "^4.1.4",
     "@mantine/form": "^4.0.7",
     "@mantine/hooks": "^4.0.7",
-    "@mantine/dates": "^4.1.4",
-    "@modulz/radix-icons": "^4.0.0",
     "@mantine/notifications": "^4.1.4",
+    "@modulz/radix-icons": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.1.1",
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.29",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
+    "nuka-carousel": "^5.0.15",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
