--- a/hms-api/package.json
+++ b/hms-api/package.json
@@ -17,6 +17,7 @@
     "eslint-config-google": "0.14.0",
     "jest": "27.5.1",
     "serverless-localstack": "0.4.36",
+    "serverless-offline": "^8.8.0",
     "serverless-plugin-typescript": "2.1.2",
     "ts-jest": "27.1.4",
     "ts-node": "10.8.0",
@@ -24,6 +25,8 @@
     "uuid": "8.3.2"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "3.95.0"
+    "@aws-sdk/client-dynamodb": "3.95.0",
+    "serverless-dynamodb-client": "0.0.2",
+    "serverless-dynamodb-local": "^0.2.40"
   }
 }
