--- a/hms-app/.env
+++ b/hms-app/.env
@@ -1,2 +1,3 @@
 #REACT_APP_CORE_URL=http://localhost:4566/restapis/8a0d24laew/local/_user_request_
 REACT_APP_CORE_URL=http://localhost:3000/local
+PORT=3001
