--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -2,17 +2,36 @@ service: hms-api
 
 plugins:
   - serverless-plugin-typescript
-  - serverless-localstack
+  - serverless-dynamodb-local
+  - serverless-offline
 
 custom:
-  localstack:
-    debug: true
-    stages: [ local ]
-    autostart: true
-    lambda:
-      mountCode: false
-    docker:
-      sudo: false
+  dynamodb:
+    stages:
+      - local
+    start:
+      port: 8000
+      inMemory: false
+      heapInitial: 200m
+      heapMax: 1g
+      migrate: true
+      seed: true
+      convertEmptyValues: true
+    seed:
+      local:
+        sources:
+          - table: hackathon
+            rawsources: [./dev/init/hackathon-seed.json]
+          - table: category
+            rawsources: [./dev/init/category-seed.json]
+          - table: idea
+            rawsources: [./dev/init/idea-seed.json]
+          - table: participant
+            rawsources: [./dev/init/participant-seed.json]
+          - table: user
+            rawsources: [./dev/init/user-seed.json]
+          - table: skill
+            rawsources: [./dev/init/skill-seed.json]
 
 provider:
   name: aws
