--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -149,7 +149,7 @@ functions:
     events:
       - http:
           # TODO this should be done using a userId from the token
-          path: idea/{id}/join/{participantId}
+          path: idea/{ideaId}/join/{participantId}
           method: put
           cors: true
   leaveIdea:
@@ -157,7 +157,7 @@ functions:
     events:
       - http:
           # TODO this should be done using a userId from the token
-          path: idea/{id}/leave/{participantId}
+          path: idea/{ideaId}/leave/{participantId}
           method: put
           cors: true
 
