--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "@types/react-redux": "^7.1.24",
+    "dayjs": "^1.11.2",
     "nuka-carousel": "^5.0.15",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
