--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -9,6 +9,7 @@
     "@mantine/hooks": "^4.0.7",
     "@mantine/notifications": "^4.1.4",
     "@modulz/radix-icons": "^4.0.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.1.1",
@@ -16,11 +17,13 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
+    "@types/react-redux": "^7.1.24",
     "dayjs": "^1.11.2",
     "nuka-carousel": "^5.0.15",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.39.0",
