--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^4.0.7",
+    "@mantine/core": "^4.2.11",
     "@mantine/dates": "^4.1.4",
     "@mantine/form": "^4.0.7",
-    "@mantine/hooks": "^4.0.7",
+    "@mantine/hooks": "^4.2.11",
     "@mantine/notifications": "^4.1.4",
+    "@mantine/rte": "^4.2.11",
     "@modulz/radix-icons": "^4.0.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.2",
