--- a/hms-app/package.json
+++ b/hms-app/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.26.0",
+    "@azure/msal-react": "^1.4.2",
     "@mantine/core": "^4.2.11",
     "@mantine/dates": "^4.1.4",
     "@mantine/form": "^4.0.7",
     "@mantine/hooks": "^4.2.11",
     "@mantine/notifications": "^4.1.4",
     "@mantine/rte": "^4.2.11",
+    "@microsoft/microsoft-graph-types": "^2.22.0",
     "@modulz/radix-icons": "^4.0.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.2",
