--- a/hms-app/.env-example
+++ b/hms-app/.env-example
@@ -1,5 +1,7 @@
 REACT_APP_CORE_URL=
 PORT=
+REACT_APP_AZURE_AD_CLIENT_ID=
 REACT_APP_AZURE_ACCOUNT_ID=
+REACT_APP_AZURE_AUTHORITY=
 REACT_APP_AZURE_REDIRECT_URL=
 REACT_APP_USE_AZURE_AUTH=
