--- a/hms-api/serverless.yml
+++ b/hms-api/serverless.yml
@@ -4,44 +4,8 @@ plugins:
   - serverless-plugin-typescript
   - serverless-dynamodb-local
   - serverless-offline
-  - serverless-plugin-ifelse
 
 custom:
-  useAzureAuth: true
-  serverlessIfElse:
-    - If: '"${self:custom.useAzureAuth}" == "false"'
-      Exclude:
-        - functions.createHackathon.events.0.http.authorizer
-        - functions.editHackathon.events.0.http.authorizer
-        - functions.listAllHackathons.events.0.http.authorizer
-        - functions.getHackathon.events.0.http.authorizer
-        - functions.deleteHackathon.events.0.http.authorizer
-        - functions.createIdea.events.0.http.authorizer
-        - functions.editIdea.events.0.http.authorizer
-        - functions.listAllIdea.events.0.http.authorizer
-        - functions.getIdea.events.0.http.authorizer
-        - functions.deleteIdea.events.0.http.authorizer
-        - functions.joinIdea.events.0.http.authorizer
-        - functions.leaveIdea.events.0.http.authorizer
-        - functions.createUser.events.0.http.authorizer
-        - functions.editUser.events.0.http.authorizer
-        - functions.listAllUser.events.0.http.authorizer
-        - functions.getUser.events.0.http.authorizer
-        - functions.deleteUser.events.0.http.authorizer
-        - functions.createParticipant.events.0.http.authorizer
-        - functions.listAllParticipant.events.0.http.authorizer
-        - functions.getParticipant.events.0.http.authorizer
-        - functions.deleteParticipant.events.0.http.authorizer
-        - functions.createCategory.events.0.http.authorizer
-        - functions.editCategory.events.0.http.authorizer
-        - functions.listAllCategory.events.0.http.authorizer
-        - functions.getCategory.events.0.http.authorizer
-        - functions.deleteCategory.events.0.http.authorizer
-        - functions.createSkill.events.0.http.authorizer
-        - functions.editSkill.events.0.http.authorizer
-        - functions.listAllSkill.events.0.http.authorizer
-        - functions.getSkill.events.0.http.authorizer
-        - functions.deleteSkill.events.0.http.authorizer
   dynamodb:
     stages:
       - local
@@ -74,6 +38,7 @@ provider:
   runtime: nodejs14.x
   region: eu-central-1
   environment:
+    AUTHORIZER_TYPE: ACTIVE_DIRECTORY
     AZURE_AD_CLIENT_ID: ${file(./secrets.json):AZURE_AD_CLIENT_ID}
     AZURE_AD_CLIENT_PUBLIC_KEY: ${file(./public_key)}
     HACKATHON_TABLE: hackathon
@@ -111,7 +76,7 @@ provider:
             - arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.PARTICIPANT_TABLE}/index/*
 
 functions:
-  authorizerFunction:
+  authorize:
     handler: src/handler/authorize.authorize
   createHackathon:
     handler: src/handler/hackathon/create.create
@@ -120,7 +85,7 @@ functions:
           path: hackathon
           method: post
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   editHackathon:
     handler: src/handler/hackathon/edit.edit
     events:
@@ -128,7 +93,7 @@ functions:
           path: hackathon/{id}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   listAllHackathons:
     handler: src/handler/hackathon/list.list
     events:
@@ -136,7 +101,7 @@ functions:
           path: hackathons
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   getHackathon:
     handler: src/handler/hackathon/get.get
     events:
@@ -144,7 +109,7 @@ functions:
           path: hackathon/{id}
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   deleteHackathon:
     handler: src/handler/hackathon/remove.remove
     events:
@@ -152,7 +117,7 @@ functions:
           path: hackathon/{id}
           method: delete
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
 
   createIdea:
     handler: src/handler/idea/create.create
@@ -161,7 +126,7 @@ functions:
           path: idea
           method: post
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   editIdea:
     handler: src/handler/idea/edit.edit
     events:
@@ -169,7 +134,7 @@ functions:
           path: idea/{id}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   listAllIdea:
     handler: src/handler/idea/list.list
     events:
@@ -177,7 +142,7 @@ functions:
           path: hackathon/{hackathonId}/ideas
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   getIdea:
     handler: src/handler/idea/get.get
     events:
@@ -185,7 +150,7 @@ functions:
           path: idea/{id}
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   deleteIdea:
     handler: src/handler/idea/remove.remove
     events:
@@ -193,7 +158,7 @@ functions:
           path: idea/{id}
           method: delete
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   joinIdea:
     handler: src/handler/idea/join.join
     events:
@@ -202,7 +167,7 @@ functions:
           path: idea/{ideaId}/join/{participantId}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   leaveIdea:
     handler: src/handler/idea/leave.leave
     events:
@@ -211,7 +176,7 @@ functions:
           path: idea/{ideaId}/leave/{participantId}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
 
   createUser:
     handler: src/handler/user/create.create
@@ -220,7 +185,7 @@ functions:
           path: user
           method: post
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   editUser:
     handler: src/handler/user/edit.edit
     events:
@@ -228,7 +193,7 @@ functions:
           path: user/{id}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   listAllUser:
     handler: src/handler/user/list.list
     events:
@@ -236,7 +201,7 @@ functions:
           path: users
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   getUser:
     handler: src/handler/user/get.get
     events:
@@ -244,7 +209,7 @@ functions:
           path: user/{id}
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   deleteUser:
     handler: src/handler/user/remove.remove
     events:
@@ -252,7 +217,7 @@ functions:
           path: user/{id}
           method: delete
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
 
   createParticipant:
     handler: src/handler/participant/create.create
@@ -261,7 +226,7 @@ functions:
           path: participant
           method: post
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   listAllParticipant:
     handler: src/handler/participant/list.list
     events:
@@ -269,7 +234,7 @@ functions:
           path: hackathon/{hackathonId}/participants
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   getParticipant:
     handler: src/handler/participant/get.get
     events:
@@ -277,7 +242,7 @@ functions:
           path: participant/{id}
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   deleteParticipant:
     handler: src/handler/participant/remove.remove
     events:
@@ -285,7 +250,7 @@ functions:
           path: participant/{id}
           method: delete
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
 
   createCategory:
     handler: src/handler/category/create.create
@@ -294,7 +259,7 @@ functions:
           path: category
           method: post
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   editCategory:
     handler: src/handler/category/edit.edit
     events:
@@ -302,7 +267,7 @@ functions:
           path: category/{id}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   listAllCategory:
     handler: src/handler/category/list.list
     events:
@@ -310,7 +275,7 @@ functions:
           path: hackathon/{hackathonId}/categories
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   getCategory:
     handler: src/handler/category/get.get
     events:
@@ -318,7 +283,7 @@ functions:
           path: category/{id}
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   deleteCategory:
     handler: src/handler/category/remove.remove
     events:
@@ -326,7 +291,7 @@ functions:
           path: category/{id}
           method: delete
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
 
   createSkill:
     handler: src/handler/skill/create.create
@@ -335,7 +300,7 @@ functions:
           path: skill
           method: post
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   editSkill:
     handler: src/handler/skill/edit.edit
     events:
@@ -343,7 +308,7 @@ functions:
           path: skill/{id}
           method: put
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   listAllSkill:
     handler: src/handler/skill/list.list
     events:
@@ -351,7 +316,7 @@ functions:
           path: skills
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   getSkill:
     handler: src/handler/skill/get.get
     events:
@@ -359,7 +324,7 @@ functions:
           path: skill/{id}
           method: get
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
   deleteSkill:
     handler: src/handler/skill/remove.remove
     events:
@@ -367,7 +332,7 @@ functions:
           path: skill/{id}
           method: delete
           cors: true
-          authorizer: authorizerFunction
+          authorizer: authorize
 
 resources:
   Resources:
